[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smf-aas"
version = "1.0.0"
description = "Strategy Monitoring Framework for Adaptive AI Systems"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "B. Kleibrink"}
]
keywords = [
    "machine-learning",
    "reinforcement-learning", 
    "monitoring",
    "drift-detection",
    "ai-safety",
    "eu-ai-act"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]
experiments = [
    "matplotlib>=3.5.0",
    "pandas>=1.4.0",
    "seaborn>=0.12.0",
    "tqdm>=4.64.0",
]
external = [
    "pettingzoo>=1.22.0",
    "gymnasium>=0.28.0",
]
all = [
    "smf-aas[dev,experiments,external]",
]

[project.urls]
"Homepage" = "https://github.com/username/smf-aas"
"Documentation" = "https://github.com/username/smf-aas#readme"
"Bug Tracker" = "https://github.com/username/smf-aas/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["smf_aas"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
